0.3.2.9000
* basic template tests

0.3.1.9000
* CRAN checks
* minor man pg tweaks

0.3.0.9000
* Kube CSS framework contributed by Kieran Healy
* Added template preview images to template function help pages

0.2.1.9000
* arbitrary footer content can be specified in the YAML header

0.2.0.9000
* `self_contained=FALSE` now copies the custom CSS
* Bulma `base.html` template fixed (navtitle/navlink weren't working)
* removed errant, duplicate `skeleton()` function

0.1.0.9000
* Initial release