@@ -20,7 +20,7 @@ When you use RStudio to create a new R Markdown document, select "From Template"
 
 ### Releases
 
-- 0.3.2.9000 Basic template tests
+- 0.3.2.9000 Basic template tests; `rmarkdown::render` examples added to template functions
 - 0.3.1.9000 Passes CRAN checks
 - 0.3.0.9000 Kube framework contributed by Kieran Healy; preview images in help pages
 - 0.2.1.9000 arbitrary footer content can be specified in the YAML header
