@@ -83,4 +83,11 @@ Based on the \href{https://github.com/jgthms/bulma/}{Bulma CSS framework}.
 \figure{bulma.png}{options: width="100\%" alt="Figure: bulma example"}
 }
 }
+\examples{
+tmp <- tempfile(fileext=".html")
+rmarkdown::render(system.file("extdata", "testrmds", "bulma.Rmd",
+                               package="markdowntemplates"),
+                  clean=TRUE, quiet=TRUE, output_file=tmp)
+unlink(tmp)
+}
 
