@@ -4,7 +4,9 @@ test_that("bulma template HTML output is correct", {
   # TODO check more things
 
   tmp <- tempfile(fileext=".html")
-  rmarkdown::render("bulma.Rmd", clean=TRUE, quiet=TRUE, output_file=tmp)
+  rmarkdown::render(system.file("extdata", "testrmds", "bulma.Rmd",
+                                package="markdowntemplates"),
+                    clean=TRUE, quiet=TRUE, output_file=tmp)
   pg <- xml2::read_html(tmp)
   expect_that(length(rvest::html_nodes(pg, "meta[property='og:title']")),
               is_more_than(0))
@@ -19,7 +21,9 @@ test_that("kube template HTML output is correct", {
   # TODO check more things
 
   tmp <- tempfile(fileext=".html")
-  rmarkdown::render("kube.Rmd", clean=TRUE, quiet=TRUE, output_file=tmp)
+  rmarkdown::render(system.file("extdata", "testrmds", "kube.Rmd",
+                                package="markdowntemplates"),
+                    clean=TRUE, quiet=TRUE, output_file=tmp)
   pg <- xml2::read_html(tmp)
   expect_that(rvest::html_text(rvest::html_nodes(pg, "title")),
               equals("INSERT_TITLE_HERE"))
@@ -32,7 +36,9 @@ test_that("minimal template HTML output is correct", {
   # TODO check more things
 
   tmp <- tempfile(fileext=".html")
-  rmarkdown::render("minimal.Rmd", clean=TRUE, quiet=TRUE, output_file=tmp)
+  rmarkdown::render(system.file("extdata", "testrmds", "minimal.Rmd",
+                                package="markdowntemplates"),
+                    clean=TRUE, quiet=TRUE, output_file=tmp)
   pg <- xml2::read_html(tmp)
   expect_that(rvest::html_text(rvest::html_nodes(pg, "title")),
               equals("INSERT_TITLE_HERE"))
@@ -45,7 +51,9 @@ test_that("skeleton template HTML output is correct", {
   # TODO check more things
 
   tmp <- tempfile(fileext=".html")
-  rmarkdown::render("skeleton.Rmd", clean=TRUE, quiet=TRUE, output_file=tmp)
+  rmarkdown::render(system.file("extdata", "testrmds", "skeleton.Rmd",
+                                package="markdowntemplates"),
+                    clean=TRUE, quiet=TRUE, output_file=tmp)
   pg <- xml2::read_html(tmp)
   expect_that(rvest::html_text(rvest::html_nodes(pg, "title")),
               equals("INSERT_TITLE_HERE"))
